my-solution/kubernetes-files/mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: myvol
          mountPath: "/var/lib/mysql"
      volumes:
      - name: myvol
        persistentVolumeClaim:
          claimName: mysql-pv-claim
