my-solution/kubernetes-files/result-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result
        image: omercan99/result
        ports:
        - containerPort: 80
