my-solution/kubernetes-files/result-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  selector:
    app: result
  ports:
  - protocol: TCP
    nodePort: 30002
    port: 80
    targetPort: 80
  type: NodePort
