my-solution/kubernetes-files/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    nodePort: 30001
    port: 80
    targetPort: 80
  type: NodePort
